Update Traitement.java